--- a/src/style/foundation/_reset.scss
+++ b/src/style/foundation/_reset.scss
@@ -1,14 +1,9 @@
-/*
- * Name        : reset
- * Description : Reset CSS
- * ============================================================
- */
-
-/*
- * http://meyerweb.com/eric/tools/css/reset/
- * v2.0 | 20110126
- * License: none (public domain)
- */
+// Name        : reset
+// Description : Reset CSS
+// ============================================================
+// http://meyerweb.com/eric/tools/css/reset/
+// v2.0 | 20110126
+// License: none (public domain)
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -31,9 +26,8 @@ time, mark, audio, video {
     vertical-align: baseline;
 }
 
-/*
- * HTML5 display-role reset for older browsers
- */
+// HTML5 display-role reset for older browsers
+
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
     display: block;
